# dinkii

./: .gitignore  .gitmodules  README.md
dinkii-neotrellis/: README.md  config.h  dinkii-neotrellis.ino  i2c_config.h  platformio.ini
dinkii-neotrellis-iii/: .gitmodules  CMakeLists.txt  board_dinkii.h
dinkii-neotrellis-iii/.claude/: settings.local.json
dinkii-neotrellis-iii/src/: MonomeSerialDevice.cpp  MonomeSerialDevice.h  config.h  debug.h  device.cpp  device_ext.h  device_lua.c  dinkii-neotrellis.cpp  iii_lua_compat.h
dinkii-neotrellis-iii/src/Adafruit_seesaw/: Adafruit_I2CDevice.cpp  Adafruit_NeoTrellis.cpp  Adafruit_seesaw.cpp  Adafruit_seesaw.h  Arduino.h  seesaw_neopixel.cpp  seesaw_neopixel.h
dinkii-neotrellis-iii/src/lua/: CMakeLists.txt  linit.c  luaconf.h
dinkii-neotrellis-iii/src/tools/: embed.py
dinkii-neotrellis-iii/src/usb/: tusb_config.h  usb_descriptors.cpp
dinkii-neotrellis-iii/uf2s/: dinkii-neotrellis-iii-128-b1.uf2  dinkii-neotrellis-iii-128-b2.uf2  dinkii-neotrellis-iii-20260328.uf2
dinkii-neotrellis-pico/: .gitignore  board_dinkii.h
dinkii-neotrellis-pico/src/: MonomeSerialDevice.cpp  MonomeSerialDevice.h  dinkii-neotrellis.cpp
dinkii-neotrellis-pico/src/Adafruit_seesaw/: seesaw_neopixel.cpp
dinkii-neotrellis-picosdk/: .gitignore  CMakeLists.txt  README.md
dinkii-neotrellis-picosdk/src/: MonomeSerialDevice.cpp  config.h  debug.cpp
dinkii-neotrellis-picosdk/src/Adafruit_seesaw/: Adafruit_I2CDevice.cpp  Adafruit_I2CDevice.h  Adafruit_NeoTrellis.cpp  Adafruit_NeoTrellis.h  Adafruit_seesaw.cpp  Adafruit_seesaw.h
dinkii-neotrellis-picosdk/src/usb/: tusb_config.h  usb_descriptors.cpp
dinkii-neotrellis-platformio/: README.md  platformio.ini
dinkii-neotrellis-platformio/circuitpython/: dinkii-cirpy-firmware_20240713.uf2
dinkii-neotrellis-platformio/circuitpython/circuitpython-HID-keyboard/: code.py
dinkii-neotrellis-platformio/firmware uf2s/: neotrellis-monome-16x8_20241105.uf2  trellis-monome-16x8_20240822.uf2  trellis-monome-8x8_20240822.uf2  trellis-test-4x4_20240822.uf2  trellis-test-4x4_20250103.uf2
dinkii-neotrellis-platformio/src/: MonomeSerialDevice.cpp
dinkii-neotrellis/circuitpython/circuitpython-midi-4x4/: code.py
dinkii-neotrellis/circuitpython/circuitpython-midi-test/: code.py
dinkii-neotrellis/firmware uf2s/: neotrellis-monome-16x8_20250206-half.uf2  trellis-monome-16x8_20260123-dim-amber.uf2  trellis-monome-8x8.uf2  trellis-test-4x4.uf2
dinkii-neotrellis/firmware uf2s/old/: trellis-monome-16x8.uf2
dinkii-neotrellis/src/: MonomeSerialDevice.h  config.h  dinkii-neotrellis.cpp
